# PL280ods

./: Draft_Visuals.html  Draft_Visuals.ipynb  README.md
data/: AIAN_drds_state.csv  drd_by_county.csv
draft_1/: Draft_Visuals.ipynb  Draft_Visuals_2.ipynb
dynamic/: README.md  basic.html  clean.py  data_host.py  dynamic.html  dynamic_flat.html  fly.toml  style.css  test.html
dynamic/data/: drd_by_county.csv
dynamic/flask-app/: app.py  clean.py  fly.toml  pyproject.toml
dynamic/flask-app/data/: AIAN_drds_state.csv
dynamic/scratch/: dynamic.html
dynamic/scratch/data/: AIAN_drds_state.csv
dynamic/static_site/: index.html
final_visual_code/: Final_Visuals.ipynb
final_visual_code/data/: model_comparison.csv  reservations_by_county.csv  z_table_states.csv
static/: Draft_Visuals.html  README.md  proposal.md
static/data/: County Centroids.csv  drd_by_county.csv
static/draft_1/: Draft_Visuals.ipynb
static/final_visual_code/: Final_Visuals.ipynb  State_Deaths_by_Year.csv
static/final_visual_code/data/: AIAN_drds_state.csv  z_table_county.csv
static_draft/: about.md
